--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "com.colliemollie.readyplayernull",
-    "version": "0.1.3",
+    "version": "0.2.0",
     "displayName": "Ready Player Null",
     "description": "Essential game ready XR features.",
     "unity": "2021.3",
@@ -10,7 +10,7 @@
     "samples": [
         {
             "displayName": "VR Player",
-            "description": "Physics based VR Player",
+            "description": "VR player controller.",
             "path": "Samples~/VRPlayer"
         }
     ],
