--- a/Runtime/ReadyPlayerNull.Runtime.asmdef
+++ b/Runtime/ReadyPlayerNull.Runtime.asmdef
@@ -1,8 +1,10 @@
 {
-    "name": "CollieMollie.XR",
+    "name": "ReadyPlayerNull.Runtime",
     "rootNamespace": "",
     "references": [
-        "GUID:fe685ec1767f73d42b749ea8045bfe43"
+        "GUID:fe685ec1767f73d42b749ea8045bfe43",
+        "GUID:dc960734dc080426fa6612f1c5fe95f3",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
